Bug 96904 - Web Inspector: XHR replay fixes: should remove replayed xhr from memory cache, should not assert.
Summary: Web Inspector: XHR replay fixes: should remove replayed xhr from memory cache...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Web Inspector (Deprecated) (show other bugs)
Version: 528+ (Nightly build)
Hardware: All All
: P2 Normal
Assignee: Vsevolod Vlasov
URL:
Keywords:
Depends on: 96931
Blocks:
  Show dependency treegraph
 
Reported: 2012-09-17 03:32 PDT by Vsevolod Vlasov
Modified: 2012-09-17 11:23 PDT (History)
12 users (show)

See Also:


Attachments
Patch (12.19 KB, patch)
2012-09-17 04:47 PDT, Vsevolod Vlasov
yurys: review+
webkit.review.bot: commit-queue-
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Vsevolod Vlasov 2012-09-17 03:32:15 PDT
Patch to follow.
Comment 1 Vsevolod Vlasov 2012-09-17 04:47:06 PDT
Created attachment 164369 [details]
Patch
Comment 2 WebKit Review Bot 2012-09-17 05:51:49 PDT
Comment on attachment 164369 [details]
Patch

Rejecting attachment 164369 [details] from commit-queue.

Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2

Last 500 characters of output:
commit-queue/Source/WebKit/chromium/third_party/v8-i18n --revision 142 --non-interactive --force --accept theirs-conflict --ignore-externals' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium'
49>At revision 142.

________ running '/usr/bin/python tools/clang/scripts/update.py --mac-only' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium'

________ running '/usr/bin/python gyp_webkit' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium'
Updating webkit projects from gyp files...

Full output: http://queues.webkit.org/results/13863820
Comment 3 Vsevolod Vlasov 2012-09-17 06:27:26 PDT
Committed r128749: <http://trac.webkit.org/changeset/128749>
Comment 4 Csaba Osztrogonác 2012-09-17 11:23:12 PDT
(In reply to comment #3)
> Committed r128749: <http://trac.webkit.org/changeset/128749>

It caused a regression - https://bugs.webkit.org/show_bug.cgi?id=96931. Could you check it, please?