Web Inspector: XHR replay fixes: should remove replayed xhr from memory cache, should not assert. https://bugs.webkit.org/show_bug.cgi?id=96904

Reviewed by Yury Semikhatsky.

Source/WebCore:

Replayed request is now removed from meory cache before replaying.
Request body is now set to 0 when it was not present in original request.

Test: http/tests/inspector/network/network-xhr-replay.html

* inspector/InspectorResourceAgent.cpp:
(WebCore::InspectorResourceAgent::replayXHR):
* xml/XMLHttpRequest.cpp:
(WebCore::XMLHttpRequest::sendFromInspector):

LayoutTests:

Re-enabled http/tests/inspector/network/network-xhr-replay.html test.

* http/tests/inspector/network/network-xhr-replay.html: Renamed from LayoutTests/http/tests/inspector/network/network-xhr-replay.html_disabled.

Canonical link: https://commits.webkit.org/114823@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128749 268f45cc-cd09-0410-ab3c-d52691b4dbfc